--- a/references/references.bib
+++ b/references/references.bib
@@ -83,3 +83,14 @@
   isbn = {978-1-4920-9740-2},
   langid = {english}
 }
+
+@article{tidydata,
+  title = {Tidy {{Data}}},
+  author = {Wickham, Hadley},
+  year = {2014},
+  journal = {Journal of Statistical Software},
+  volume = {59},
+  number = {10},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v059.i10}
+}
