--- a/2024Spring/material/timetable.qmd
+++ b/2024Spring/material/timetable.qmd
@@ -10,15 +10,9 @@ execute:
 # Tentative outline
 
 ::: {.callout-important collapse="false"}
-## 📢 Important change! (01.05.2024)
+## 📢 Important change! (06.05.2024)
 
--   🗓️Lecture on data import will be a video lecture.
-:::
-
-::: {.callout-important collapse="false"}
-## 📢 Important change! (26.04.2024)
-
--   🗓️Timing of lectures after visualization adjusted.
+-   🗓️Sessions 11 and 12 switched.
 :::
 
 | **\#** | **Date**        | **Day** | **Topic**                                        |
@@ -33,10 +27,10 @@ execute:
 | 8      | 26.04.24        | Fri     | Finish data visualization and Project Management |
 | 9      | 02.05.24        | Thu     | Data import (video lecture)                      |
 | 10     | 03.05.24        | Fri     | Video lectures on data wrangling.                |
-| 11     | 09.05.24        | Thu     | Recap and practice: explorative data analysis    |
 | NN     | 10.05.24        | Fri     | No lecture due to Christi Himmelfahrt            |
-| 12     | 16.05.24        | Thu     | Introducing Quarto and R Markdown                |
-| 13     | 17.05.24        | Fri     | Recap and practice                               |
+| 11     | 09.05.24        | Thu     | Introducing Quarto and R Markdown                |
+| 12     | 16.05.24        | Thu     | Recap and practice: Visualization & data preparation    |
+| 13     | 17.05.24        | Fri     | Recap and practice: explorative data analysis    |
 | 14     | 23.05.24        | Thu     | Introduction to data analytics                   |
 | 15     | 30.05.24        | Thu     | Sampling theory                                  |
 | 16     | 31.05.24        | Fri     | Simple linear regression                         |
