--- a/2024Spring/material/timetable.qmd
+++ b/2024Spring/material/timetable.qmd
@@ -39,7 +39,9 @@ execute:
 | 19     | 20.06.24        | Thu     | Multiple linear regression II                    |
 | 20     | 21.06.24        | Fri     | Recap and practice                               |
 | **NN** | **27.06.24**    | **Mon** | **Final exam; 14:00 – 16:00, HEL 063**           |
-| NN     | 2nd exam period | TBD     | Re-take exam for all who failed the first exam   |
+| **NN** | **29.08.24**    | **Thu** | **Re-take exam; 14:00 – 16:00, HEL 063**         |
+
+The re-take exam is only for those who have failed the final exam.
 
 <!--
 
