--- a/2024Spring/material/session12.qmd
+++ b/2024Spring/material/session12.qmd
@@ -96,6 +96,6 @@ output. Also, warnings and messages should not be visible.
 
 ## 📚 Suggested Reading
 
-- [Solutions to all the exercises]() (TBA)
+- [Solutions to all the exercises](session12-material/session12-solutions.qmd)
 - Tutorial on using the WDI package (TBA) 
 - ...
