--- a/2024Spring/material/timetable.qmd
+++ b/2024Spring/material/timetable.qmd
@@ -31,13 +31,13 @@ execute:
 | 11     | 10.05.24        | Fri     | Introducing Quarto and R Markdown                |
 | 12     | 16.05.24        | Thu     | Recap and practice: Visualization & data preparation    |
 | 13     | 30.05.24        | Thu     | Recap and practice: explorative data analysis    |
-| 14     | 31.05.24        | Fri     | Introduction to data analytics                   |
-| 15     | 06.06.24        | Thu     | Sampling theory                                  |
-| 16     | 07.06.24        | Fri     | Simple linear regression                         |
-| 17     | 13.06.24        | Thu     | Recap and practice                               |
-| 18     | 14.06.24        | Fri     | Multiple linear regression I                     |
-| 19     | 20.06.24        | Thu     | Multiple linear regression II                    |
-| 20     | 21.06.24        | Fri     | Recap and practice                               |
+| NN     | 31.05.24        | Fri     | Cancelled                                        |
+| 14     | 06.06.24        | Thu     | Introduction to data analysis                    |
+| 15     | 07.06.24        | Fri     | Sampling theory                                  |
+| 16     | 13.06.24        | Thu     | Simple linear regression                         |
+| 17     | 14.06.24        | Fri     | Multiple linear regression I                     |
+| 18     | 20.06.24        | Thu     | Multiple linear regression II                    |
+| 19     | 21.06.24        | Fri     | Recap and practice                               |
 | **NN** | **27.06.24**    | **Mon** | **Final exam; 14:00 – 16:00, HEL 063**           |
 | **NN** | **29.08.24**    | **Thu** | **Re-take exam; 14:00 – 16:00, HEL 063**         |
 
