--- a/2024Spring/material/session15.qmd
+++ b/2024Spring/material/session15.qmd
@@ -1,22 +1,31 @@
 ---
-title: "🗓️ Session 15"
+title: "🗓️ Session 15: Sampling"
 date: "2024-06-07"
 date-modified: last-modified
 ---
 
-TBD
-
+A central concept in data science - and in applied statistics more generally - 
+is that of *sampling*. This refers to the strategy of using (small) samples to 
+learn about a (large) population. For example, if you wanted to understand the 
+effect of TV advertising on the consumer behaviour of young men in Germany, 
+you could study the whole population of young men in Germany. 
+But since this is usually not feasible, you would rather take a sample of young 
+men, study their behaviour and then generalise to the whole population. 
+In this session we will discuss when and how this is possible. 
+In this context, we will also learn about the concept of 
+*Monte Carlo simulations* and two central concepts of probability theory 
+underlying applied statistics: the central limit theorem and the law of large 
+numbers, both of which underlie much of modern sampling theory.
 
 ## 👨‍🏫 Lecture Slides 
 
 Either click on the slide area below or click 
-[here](/2024Spring/material/slides/T15-XXX.pdf) to download the slides.
+[here](/2024Spring/material/slides/T15-Sampling.pdf) to download the slides.
 
-<!---
 ```{=html}
 <div class="embed-container">
   <iframe 
-  src="/2024Spring/material/slides/T15-XXX.pdf" 
+  src="/2024Spring/material/slides/T15-Sampling.pdf" 
   style="border: 0.5px" 
   width="80%"
   height="80%"
@@ -24,6 +33,7 @@ Either click on the slide area below or click
 </div>
 ```
 
+<!---
 ::: {.callout-tip collapse="true"}
 ## Code for the markdown desaster and a possible solution
 
@@ -37,32 +47,21 @@ Either click on the slide area below or click
 So far, there are no learning videos available for this lecture. 
 
 ## 📚 Mandatory Reading
-<!---
-- [The CommonMark markdown tutorial](https://commonmark.org/help/tutorial/)
-- [Quarto tutorial I: the basics](https://quarto.org/docs/get-started/hello/rstudio.html)
-- [Quarto tutorial II: computations](https://quarto.org/docs/get-started/computations/rstudio.html)
-- [Quarto tutorial III: authoring quarto documents](https://quarto.org/docs/get-started/authoring/rstudio.html)
---->
-## Further Reading
-<!---
-- [Blog introducing Quarto](https://www.apreshill.com/blog/2022-04-we-dont-talk-about-quarto/)
-- [Quarto and R Markdown](https://yihui.org/en/2022/04/quarto-r-markdown/)
-- [The comprehensive Quarto documentation](https://quarto.org/docs/guide/)
-- [Markdown basics](https://quarto.org/docs/authoring/markdown-basics.html)
-- [The R Markdown Cookbook](https://bookdown.org/yihui/rmarkdown-cookbook/)
---->
+
+- [Tutorial on sampling](/2024Spring/tutorials/mcs/index.qmd)
+- [Chapter 7](https://moderndive.com/7-sampling.html) in @moderndive.
+
 ## ✍️ Coursework
-<!---
-- Do the exercises `Quarto` from the `DataScienceExercises` package
+
+- Do the exercises `Sampling` from the `DataScienceExercises` package
 
 ::: {.callout-tip collapse="true"}
 ## Quick code for starting the exercises
 ```{r}
 #| eval: false
 learnr::run_tutorial(
-  name = "Quarto", 
+  name = "Sampling", 
   package = "DataScienceExercises", 
   shiny_args=list("launch.browser"=TRUE))
 ```
 :::
---->
