--- a/2024Spring/material/timetable.qmd
+++ b/2024Spring/material/timetable.qmd
@@ -35,8 +35,8 @@ execute:
 | 14     | 06.06.24        | Thu     | Introduction to data analysis                    |
 | 15     | 07.06.24        | Fri     | Sampling I                                       |
 | 16     | 13.06.24        | Thu     | Sampling II                                      |
-| 17     | 14.06.24        | Fri     | Simple linear regression                         |
-| 18     | 20.06.24        | Thu     | Multiple linear regression                       |
+| 17     | 14.06.24        | Fri     | Simple linear regression I                       |
+| 18     | 20.06.24        | Thu     | Simple linear regression II                      |
 | 19     | 21.06.24        | Fri     | Recap and practice                               |
 | **NN** | **27.06.24**    | **Mon** | **Final exam; 14:00 – 16:00, HEL 063**           |
 | **NN** | **29.08.24**    | **Thu** | **Re-take exam; 14:00 – 16:00, HEL 063**         |
